Add a reference on parametric timed pattern matching

--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -269,6 +269,24 @@
 } 
 
 
+@inproceedings{AHW18,
+	author = {Andr{\'e}, {\'E}tienne and Hasuo, Ichiro and Waga, Masaki},
+	title = {Offline timed pattern matching under uncertainty},
+	doi = {10.1109/ICECCS2018.2018.00010},
+	booktitle = {Proceedings of the 23rd International Conference on Engineering of Complex Computer Systems ({ICECCS} 2018)},
+	SHORTbooktitle = {{ICECCS}},
+	editor = {Lin, Anthony Widjaja and Sun, Jun},
+	eventdate = {2018-12-12/2018-12-14},
+	location = {Melbourne, Australia},
+	eventdate = {2018-12-12/2018-12-14},
+	pages = {10--20},
+	publisher = {{IEEE} Computer Society},
+	year = {2018},
+	award = {Best paper award},
+	keywords = {intc},
+	coreRank = {A},
+}
+
 @inproceedings{ALime17,
 	author = {Andr{\'e}, {\'E}tienne and Lime, Didier},
 	SHORTbooktitle =		{{ACSD}},
