wrong option name

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -1408,7 +1408,8 @@ Each state is represented with its discrete part (location and values of the dis
 % Since version 2.7,
 This file has a standardized format, and can therefore be parsed using an external tool.
 
-To disable the creation of this file, please use \styleOption{-no-result-file} (see \cref{chapter:options}).
+To disable the creation of this file, please use \styleOption{-no-output-result}
+(see \cref{chapter:options}).
 
 We do not give a formal grammar for this file (yet), but it can be easily inferred from example outputs.
 
