Add keyword 'constant' to grammar

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -2504,7 +2504,8 @@ We define each of those two components below.
 \regleGrammaire{var\_type}
 %------------------------------------------------------------
 \begin{tabular}{l l}
-	\   & \styleIMI{clock}     \\
+	$|$ & \styleIMI{clock}     \\
+	$|$ & \styleIMI{constant}  \\
 	$|$ & \styleIMI{discrete}  \\
 	$|$ & \styleIMI{parameter} \\
 \end{tabular}
