Remove the integer build number, and only keep the git hash to identify a build

--- a/doc/title_and_toc.tex
+++ b/doc/title_and_toc.tex
@@ -27,7 +27,7 @@
 
 \vspace{1.5cm}
 
-{\small \hfill{}Build \input{../build_number.txt}}
+% {\small \hfill{}Build \input{../build_number.txt}}
 
 {\small \hfill{}\today{}}
 
