Add patterns to syntax summaries

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -1293,6 +1293,11 @@ We summarize algorithms in \cref{table:summary:algorithms}, recalling the basic 
 			\hline
 			PRPC                   & \styleIMI{PRPC(state\_pred, hyper\_rect)}        & \cellYes{} & \cellNo{}  \\
 
+			% Observer patterns
+
+			\hline
+			Patterns                    & \styleIMI{pattern(<pattern>)}      & \cellYes{} & \cellYes{}  \\
+
 			\hline
 		\end{tabular}
 
@@ -1367,6 +1372,10 @@ We summarize algorithms in \cref{table:summary:algorithms}, recalling the basic 
 			\hline
 			PRPC                   & \styleIMI{PRPC(state\_pred, hyper\_rect)}        & \cellYes{} & \styleOption{inclusion}  \\
 
+			% Observer patterns = reachability
+
+			\hline
+			Patterns                    & \styleIMI{pattern(<pattern>)}      & \cellYes{} & \styleOption{inclusion} \\
 			\hline
 		\end{tabular}
 
